--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "ai-financial-planner",
+    "name": "CoinForLooP",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:5000",
     "dependencies": {
         "@chakra-ui/icons": "^2.1.1",
         "@chakra-ui/react": "^2.8.1",
